--- a/window_company/html_css_js/index.html
+++ b/window_company/html_css_js/index.html
@@ -6,7 +6,6 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Завод элитных жалюзей и ролетов</title>
-	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=ru" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="css/lightbox.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/owl.carousel.css">
@@ -35,8 +34,9 @@
 		</ul>
 	</div>
 </nav>
-<!-- <div class="main_slider">
-	<div class="wrapper">
+<div class="main_slider">
+	<div class="wrapper wrapper_slider">
+	<div class="cnt">
 		<div id="slider">
           <ul>
             <li style="background-image: url(img/banner.png);"></li>
@@ -44,11 +44,12 @@
            <li style="background-image: url(img/banner.png);"></li>
             <li style="background-image: url(img/banner.png);"></li>
            </ul>
-		  <a href="#" class="control_next"><img src='img/arrow_white.png' onmouseover="this.src='img/arrow-green.png';" onmouseout="this.src='img/arrow_white.png';"></a>
-		  <a href="#" class="control_prev"><img src='img/arrow_white.png' onmouseover="this.src='img/arrow-green.png';" onmouseout="this.src='img/arrow_white.png';"></a>   
+		  <a href="javascript:void(0);" class="control_next"><img src='img/arrow_white.png' onmouseover="this.src='img/arrow-green.png';" onmouseout="this.src='img/arrow_white.png';"></a>
+		  <a href="javascript:void(0);" class="control_prev"><img src='img/arrow_white.png' onmouseover="this.src='img/arrow-green.png';" onmouseout="this.src='img/arrow_white.png';"></a>   
+        </div>
         </div>
 	</div>
-</div> -->
+</div>
 <div class="services">
 	<div class="wrapper">
 		<ul class="services_list clearfix">
