--- a/window_company/html_css_js/index.html
+++ b/window_company/html_css_js/index.html
@@ -22,7 +22,17 @@
 				<li class="header_number_item">000 000 00 00</li>
 				<li class="header_number_item">000 000 00 00</li>
 			</ul>
+			<div class="btn_container">
 			<div class="callback_btn">Вам перезвонить?</div>
+			<div id="modal_form2"> 
+		      <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
+		      <form>
+		      	<label for="name">Введите Ваше имя</label><br><input id="name" type="text"></input>
+		      	<label for="phone">Введите Ваш телефон</label><br><input id="phone" type="tel"></input>
+		      	<input type="submit" id="submit" value="Заказать"></input>
+		      </form>
+             </div>
+             </div>
 		</div>
 	</div>
 </header>
@@ -121,6 +131,7 @@
 			<li>Большой выбор продукции</li>
 			<li>Возможность оптовой продажи</li>
 			<li>Работаем по безналичному расчету с НДС, который вы сможете возместить</li>
+			<li>Мы идем к вам на встречу и предоставляем демонстрацию товара, расчет стоимости и договор у вас на месте. Мы ценим Ваше время.</li>
 			<li>Мы работаем по государственной программе «Кредит на утепление» (компенсация от 30до 70%)</li>
 		</ol>
 	</div>
@@ -227,17 +238,26 @@
 <div id="modal_form1"> 
       <span id="modal_close1"></i></span> <!-- Кнoпкa зaкрыть --> 
       <div class="product_card">
-      	<div class="product_card_img">
-      		<a href="img/product_card.png" data-lightbox="image-1"><img src="img/product_card.png"></a>
-      		<a href="img/product_card.png" data-lightbox="image-1"><img src="img/product_card.png"></a>
-      	</div>
       	<div class="product_card_text">
       		<h3>Название блока</h3>
       		<p>Благодаря жалюзи вы сможете: приобрести уникальные солнцезащитные системы по лучшей цене; регулировать количество света в помещении; создать гармоничный и стильный интерьер; больше не прятать монитор компьютера от солнечных бликов; отдыхать с семьей и гостями в комфорте. Благодаря такому выбору, каждый сможет подобрать оптимальные модели, изысканно сочетать их с интерьером любого помещения.</p>
       	</div>
+      	<div class="product_card_img clearfix">
+      		<a href="img/product_card.png" data-lightbox="image-1"><img src="img/product_card.png"></a>
+      		<a href="img/product_card.png" data-lightbox="image-1"><img src="img/product_card.png"></a>
+      	</div>
       </div>
 </div>
 <div id="overlay1"></div><!-- Пoдлoжкa -->
+<!-- modal 3 -->
+<div id="modal_form2"> 
+      <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
+      <form>
+      	<label for="name">Введите Ваше имя</label><br><input id="name" type="text"></input>
+      	<label for="phone">Введите Ваш телефон</label><br><input id="phone" type="tel"></input>
+      	<input type="submit" id="submit" value="Заказать"></input>
+      </form>
+</div>
 
 
 
