--- a/window_company/html_css_js/index.html
+++ b/window_company/html_css_js/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=0.5">
 	<title>Завод элитных жалюзей и ролетов</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -22,7 +22,7 @@
 				<li class="header_number_item">000 000 00 00</li>
 				<li class="header_number_item">000 000 00 00</li>
 			</ul>
-			<div class="btn_container">
+			<!-- <div class="btn_container"> -->
 			<div class="callback_btn">Вам перезвонить?</div>
 			<div id="modal_form2"> 
 		      <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
@@ -33,7 +33,7 @@
 		      </form>
              </div>
              </div>
-		</div>
+	<!-- 	</div> -->
 	</div>
 </header>
 <nav>
