--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -63,10 +63,10 @@
 </div>
 	<div class="wrapper wrapper_slider">
         <ul class="bxslider">
-		  <li><img src="img/banner.png" /></li>
-		  <li><img src="img/banner.png" /></li>
-		  <li><img src="img/banner.png" /></li>
-		  <li><img src="img/banner.png" /></li>
+		  <li><img src="img/banner.png" alt="" /></li>
+		  <li><img src="img/banner.png" alt="" /></li>
+		  <li><img src="img/banner.png" alt="" /></li>
+		  <li><img src="img/banner.png" alt="" /></li>
         </ul>
 	</div>
 </div>
@@ -74,10 +74,10 @@
 <div class="services">
 	<div class="wrapper">
 		<ul class="services_list clearfix">
-			<li class="services_item"><img class="hvr-float" src="img/1.png"><p class="services_text">Бесплатная доставка</p></li>
-			<li class="services_item"><img class="hvr-float" src="img/2.png"><p class="services_text">Выезд замерщика и <br>дизайнера бесплатно</p></li>
-			<li class="services_item"><img class="hvr-float" src="img/3.png"><p class="services_text">Гарантия 2 года</p></li>
-			<li class="services_item"><img class="hvr-float" src="img/4.png"><p class="services_text">Экономия времени и денег</p></li>
+			<li class="services_item"><img class="hvr-float" src="img/1.png" alt=""><p class="services_text">Бесплатная доставка</p></li>
+			<li class="services_item"><img class="hvr-float" src="img/2.png" alt=""><p class="services_text">Выезд замерщика и <br>дизайнера бесплатно</p></li>
+			<li class="services_item"><img class="hvr-float" src="img/3.png" alt=""><p class="services_text">Гарантия 2 года</p></li>
+			<li class="services_item"><img class="hvr-float" src="img/4.png" alt=""><p class="services_text">Экономия времени и денег</p></li>
 			<li class="services_item"></li>
 		</ul>
 	</div>
@@ -145,10 +145,10 @@
 	<div class="wrapper">
 	<h2 class="made_works_head">Реализованные объекты</h2>
 		<div class="made_works_container">
-			<a href="img/works.png" data-lightbox="image-2"><img src="img/works.png"></a>
-      		<a href="img/works.png" data-lightbox="image-2"><img src="img/works.png"></a>
-      		<a href="img/works.png" data-lightbox="image-2"><img src="img/works.png"></a>
-      		<a href="img/works.png" data-lightbox="image-2"><img src="img/works.png"></a>
+			<a href="img/94568447_0.jpg" data-lightbox="image-2"><img src="img/94568447_0.jpg" alt=""></a>
+      		<a href="img/723582975_0.jpg" data-lightbox="image-2"><img src="img/723582975_0.jpg" alt=""></a>
+      		<a href="img/291962879_13.jpg" data-lightbox="image-2"><img src="img/291962879_13.jpg" alt=""></a>
+      		<a href="img/upload.jpg" data-lightbox="image-2"><img src="img/upload.jpg" alt=""></a>
 		</div>
 	</div>
 </div>
@@ -156,11 +156,11 @@
 	<div class="wrapper">
 		<h2 class="how_we_work_head">Как мы работаем</h2>
 		<ul class="how_we_work_container clearfix">
-			<li class="how_we_work_item first_item"><img src="img/5.png"><p>Оформление заявки</p></li>
-			<li class="how_we_work_item second_item"><img src="img/6.png"><p>Замеры объекта</p></li>
-			<li class="how_we_work_item third_item"><img src="img/7.png"><p>Предоплата</p></li>
-			<li class="how_we_work_item fourth_item"><img src="img/8.png"><p>Установка</p></li>
-			<li class="how_we_work_item fifth_item"><img src="img/9.png"><p>Окончательная</br>оплата заказа</p></li>
+			<li class="how_we_work_item first_item"><img src="img/5.png" alt=""><p>Оформление заявки</p></li>
+			<li class="how_we_work_item second_item"><img src="img/6.png" alt=""><p>Замеры объекта</p></li>
+			<li class="how_we_work_item third_item"><img src="img/7.png" alt=""><p>Предоплата</p></li>
+			<li class="how_we_work_item fourth_item"><img src="img/8.png" alt=""><p>Установка</p></li>
+			<li class="how_we_work_item fifth_item"><img src="img/9.png" alt=""><p>Окончательная</br>оплата заказа</p></li>
 		</ul>
 	</div>
 </div>
@@ -191,32 +191,32 @@
 		    <div class="carusel_hider">
 		        <ul class="item_slider_list">
 		            <li class="carusel_item">
-		               <img src="img/review.png">
+		               <img src="img/review.png" alt="">
 		               <h3 class="carusel_item_head">Дарина</h3>
 		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p>
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png">
+		                <img src="img/review.png" alt="">
 		                <h3 class="carusel_item_head">Дарина</h3>
 		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
 		            </li>
 		            <li class="carusel_item">
-		               <img src="img/review.png"> 
+		               <img src="img/review.png" alt=""> 
 		               <h3 class="carusel_item_head">Дарина</h3>
 		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png">
+		                <img src="img/review.png" alt="">
 		                <h3 class="carusel_item_head">Дарина</h3>
 		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png">
+		                <img src="img/review.png" alt="">
 		                <h3 class="carusel_item_head">Дарина</h3>
 		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png">
+		                <img src="img/review.png" alt="">
 		                <h3 class="carusel_item_head">Дарина</h3>
 		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
 		            </li>
@@ -231,17 +231,17 @@
 	<h2 class="payment_head">Установка и оплата</h2>
 		<div class="payment_countainer">
 			<div class="payment_item">
-			<img src="img/10.png">
+			<img src="img/10.png" alt="">
 			<h3 class="payment_item_head">Установка ваших ролетов и жалюзи</h3>
 			<p class="payment_item_text">Блок «Установка (установка своей продукции и чужой) и Оплата» (безналичный, наличный) содержит иконки с текстовой информацией.</p>
 			</div>
-			<div class="payment_item"><img src="img/11.png">
+			<div class="payment_item"><img src="img/11.png" alt="">
 			<h3 class="payment_item_head">Проводим установку наших товаров</h3>
 			<p class="payment_item_text">Блок «Установка (установка своей продукции и чужой) и Оплата» (безналичный, наличный) содержит иконки с текстовой информацией.</p></div>
-			<div class="payment_item"><img src="img/12.png">
+			<div class="payment_item"><img src="img/12.png" alt="">
 			<h3 class="payment_item_head">Оплата наличными</h3></br>
 			<p class="payment_item_text">Блок «Установка (установка своей продукции и чужой) и Оплата» (безналичный, наличный) содержит иконки с текстовой информацией.</p></div>
-			<div class="payment_item"><img src="img/13.png">
+			<div class="payment_item"><img src="img/13.png" alt="">
 			<h3 class="payment_item_head">Оплата безналом</h3></br>
 			<p class="payment_item_text">Блок «Установка (установка своей продукции и чужой) и Оплата» (безналичный, наличный) содержит иконки с текстовой информацией.</p></div>
 		</div>
@@ -286,12 +286,15 @@
       <span id="modal_close1"></i></span> <!-- Кнoпкa зaкрыть --> 
       <div class="product_card">
       	<div class="product_card_text">
-      		<h3>Название блока</h3>
-      		<p>Благодаря жалюзи вы сможете: приобрести уникальные солнцезащитные системы по лучшей цене; регулировать количество света в помещении; создать гармоничный и стильный интерьер; больше не прятать монитор компьютера от солнечных бликов; отдыхать с семьей и гостями в комфорте. Благодаря такому выбору, каждый сможет подобрать оптимальные модели, изысканно сочетать их с интерьером любого помещения.</p>
+      		<h3>Окна</h3>
+      		<p>Наша компания занимается установкой металопластиковых окон. В современном мире все новые одноэтажные и многоэтажные дома оснащаются металопластиковыми окнами.
+      		<p>Окна, с которыми мы работаем изготовлены из экологически чистого материала, они экологичные, пожароустойчивые, долговечные и экономичные.</p>
+      		<p>Именно благодаря этим свойствам платисковые окна играют самую важную роль в Вашем доме. Так как они не только служат предметом защиты от грази и пыли, а также не продувают, сохраняя Ваш дом от солнца и шума.</p></p>
       	</div>
       	<div class="product_card_img clearfix">
-      		<a href="img/product_card.png" data-lightbox="image-1"><img src="img/product_card.png"></a>
-      		<a href="img/product_card.png" data-lightbox="image-1"><img src="img/product_card.png"></a>
+      		<a href="img/imgpsh_fullsize.jpg" data-lightbox="image-1"><img src="img/imgpsh_fullsize.jpg" alt=""></a>
+      		<a href="img/imgpsh_fullsize1.jpg" data-lightbox="image-1"><img src="img/imgpsh_fullsize1.jpg" alt=""></a>
+      		<a href="img/imgpsh_fullsize2.jpg" data-lightbox="image-1"><img src="img/imgpsh_fullsize2.jpg" alt=""></a>
       	</div>
       </div>
 </div>
@@ -334,10 +337,10 @@
 </p>
       	</div>
       	<div class="product_card_img clearfix">
-      		<a href="img/phpThumb_generated_thumbna0il.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbna0il.jpg"></a>
-      		<a href="imgphpThumb_generated_thumbnail.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbnail.jpg"></a>
-      		<a href="img/phpThumb_generated_thumbnaiкl.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbnaiкl.jpg"></a>
-      		<a href="img/phpThumb_generatedпп_thumbnail.jpg" data-lightbox="image-4"><img src="img/phpThumb_generatedпп_thumbnail.jpg"></a>
+      		<a href="img/phpThumb_generated_thumbna0il.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbna0il.jpg" alt=""></a>
+      		<a href="imgphpThumb_generated_thumbnail.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbnail.jpg" alt=""></a>
+      		<a href="img/phpThumb_generated_thumbnaiкl.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbnaiкl.jpg" alt=""></a>
+      		<a href="img/phpThumb_generatedпп_thumbnail.jpg" data-lightbox="image-4"><img src="img/phpThumb_generatedпп_thumbnail.jpg" alt=""></a>
       	</div>
       </div>
 </div>
@@ -366,7 +369,7 @@
 			</p>
       	</div>
       	<div class="product_card_img clearfix">
-      		<a href="img/98566143_1.jpg" data-lightbox="image-1"><img src="img/98566143_1.jpg"></a>
+      		<a href="img/98566143_1.jpg" data-lightbox="image-1"><img src="img/98566143_1.jpg" alt=""></a>
       		<a href="img/blinds.jpg" data-lightbox="image-1"><img src="img/blinds.jpg" alt="" height="auto;"></a>
       		<a href="img/gate.jpg" data-lightbox="image-1"><img src="img/gate.jpg" alt="" height="auto;"></a>
 
