--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -12,6 +12,10 @@
 	<link href="css/jquery.bxslider.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/hover.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/jquery.transit.min.js"></script>
+<script type="text/javascript" src="js/jquery.bxslider.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 	
 </head>
 <body>
@@ -19,7 +23,7 @@
 	<div class="wrapper clearfix">
 		<div class="logo"><img src="img/logo.png"></div>
 		<div class="header_contacts clearfix">
-			<div class="phone_icon"><img src="img/phone_icon.png"></div>
+			<div class="phone_icon"><img src="img/phone_icon.png" alt=""></div>
 			<ul class="header_number">
 				<li class="header_number_item">000 000 00 00</li>
 				<li class="header_number_item">000 000 00 00</li>
@@ -338,7 +342,7 @@
       	</div>
       	<div class="product_card_img clearfix">
       		<a href="img/phpThumb_generated_thumbna0il.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbna0il.jpg" alt=""></a>
-      		<a href="imgphpThumb_generated_thumbnail.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbnail.jpg" alt=""></a>
+      		<a href="img/phpThumb_generated_thumbnail.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbnail.jpg" alt=""></a>
       		<a href="img/phpThumb_generated_thumbnaiкl.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbnaiкl.jpg" alt=""></a>
       		<a href="img/phpThumb_generatedпп_thumbnail.jpg" data-lightbox="image-4"><img src="img/phpThumb_generatedпп_thumbnail.jpg" alt=""></a>
       	</div>
@@ -381,12 +385,12 @@
 
 
 
+<script type="text/javascript" src="js/lightbox.js"></script>
 
-
-<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+<!-- <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/jquery.transit.min.js"></script>
 <script type="text/javascript" src="js/lightbox.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/script.js"></script> -->
 </body>
 </html>
