--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -296,9 +296,9 @@
       		<p>Именно благодаря этим свойствам платисковые окна играют самую важную роль в Вашем доме. Так как они не только служат предметом защиты от грази и пыли, а также не продувают, сохраняя Ваш дом от солнца и шума.</p></p>
       	</div>
       	<div class="product_card_img clearfix">
-      		<a href="img/imgpsh_fullsize.jpg" data-lightbox="image-1"><img src="img/imgpsh_fullsize.jpg" alt=""></a>
-      		<a href="img/imgpsh_fullsize1.jpg" data-lightbox="image-1"><img src="img/imgpsh_fullsize1.jpg" alt=""></a>
-      		<a href="img/imgpsh_fullsize2.jpg" data-lightbox="image-1"><img src="img/imgpsh_fullsize2.jpg" alt=""></a>
+      		<a href="img/imgpsh_fullsize.jpg" data-lightbox="image-5"><img src="img/imgpsh_fullsize.jpg" alt=""></a>
+      		<a href="img/imgpsh_fullsize1.jpg" data-lightbox="image-5"><img src="img/imgpsh_fullsize1.jpg" alt=""></a>
+      		<a href="img/imgpsh_fullsize2.jpg" data-lightbox="image-5"><img src="img/imgpsh_fullsize2.jpg" alt=""></a>
       	</div>
       </div>
 </div>
@@ -386,6 +386,7 @@
 
 
 <script type="text/javascript" src="js/lightbox.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 
 <!-- <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/jquery.transit.min.js"></script>
