--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -293,7 +293,7 @@
       		<h3>Окна</h3>
       		<p>Наша компания занимается установкой металопластиковых окон. В современном мире все новые одноэтажные и многоэтажные дома оснащаются металопластиковыми окнами.
       		<p>Окна, с которыми мы работаем изготовлены из экологически чистого материала, они экологичные, пожароустойчивые, долговечные и экономичные.</p>
-      		<p>Именно благодаря этим свойствам платисковые окна играют самую важную роль в Вашем доме. Так как они не только служат предметом защиты от грази и пыли, а также не продувают, сохраняя Ваш дом от солнца и шума.</p></p>
+      		<p>Именно благодаря этим свойствам платисковые окна играют самую важную роль в Вашем доме. Так как они не только служат предметом защиты от грязи и пыли, а также не продувают, сохраняя Ваш дом от солнца и шума.</p></p>
       	</div>
       	<div class="product_card_img clearfix">
       		<a href="img/imgpsh_fullsize.jpg" data-lightbox="image-5"><img src="img/imgpsh_fullsize.jpg" alt=""></a>
