--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -47,7 +47,6 @@
 		      </form>
              </div>
              </div>
-	<!-- 	</div> -->
 	</div>
 </header>
 <nav>
@@ -274,7 +273,7 @@
 <div class="copyright_container"><div class="wrapper copyright clearfix">Создание и разработка сайта <a href="http://web-intellectus.com/" target="_blank">© Intellectus-studio 2016</a></div></div>
 <a href="#" class="scrollup"></a>
 </footer>
-<!-- modal1 -->
+<!-- modal -->
 	<div id="modal_form"> 
       <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
       <form>
@@ -283,11 +282,11 @@
       	<input type="submit" id="submit" value="Заказать"></input>
       </form>
 </div>
-<div id="overlay"></div><!-- Пoдлoжкa -->
+<div id="overlay"></div>
 
-<!-- modal2 -->
+<!-- modal1 Окна -->
 <div id="modal_form1"> 
-      <span id="modal_close1"></i></span> <!-- Кнoпкa зaкрыть --> 
+      <span id="modal_close1"></i></span> 
       <div class="product_card">
       	<div class="product_card_text">
       		<h3>Окна</h3>
@@ -302,8 +301,8 @@
       	</div>
       </div>
 </div>
-<div id="overlay1"></div><!-- Пoдлoжкa -->
-<!-- modal 3 -->
+<div id="overlay1"></div>
+<!-- modal фос -->
 <div id="modal_form2"> 
       <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
       <form>
@@ -312,10 +311,9 @@
       	<input type="submit" id="submit" value="Заказать"></input>
       </form>
 </div>
-<!-- modal4 -->
+<!-- modal4 жалюзи -->
 <div id="modal_form4"> 
-      <span id="modal_close4"></i></span> <!-- Кнoпкa зaкрыть --> 
-      <div class="product_card">
+      <span id="modal_close4"></i></span>
       	<div class="product_card_text">
       		<h3>Жалюзи</h3>
       		<h4>Жалюзи горизонтальные</h4>
@@ -331,14 +329,14 @@
 	<li><span>системы: Классик (шнуровое управление), кассетная система Профи (монокомандное цепочное управление)</span></li>
 </ul>
 </p>
-<h4>Жалюзи вертикальные</h4>
-<p>
-	Вертикальные жалюзи являются эстетическим, практичным и удобным решением.
-Различные варианты раздвижек и разворот ламелей позволяют изменить световой поток, тем самым, защищая помещение от бликов солнца обеспечивая его освещенность.
-Разнообразие тканей для вертикальных жалюзи и простота управления удовлетворит запросы самого требовательного заказчика.
-Одна из отличительных особенностей вертикальных жалюзи - это возможность их применения в качестве перегородок в административных и производственных помещениях.
-Варианты раздвижки вертикальных жалюзи (определяются в момент оформления заказа).
-</p>
+		<h4>Жалюзи вертикальные</h4>
+		<p>
+			Вертикальные жалюзи являются эстетическим, практичным и удобным решением.
+		Различные варианты раздвижек и разворот ламелей позволяют изменить световой поток, тем самым, защищая помещение от бликов солнца обеспечивая его освещенность.
+		Разнообразие тканей для вертикальных жалюзи и простота управления удовлетворит запросы самого требовательного заказчика.
+		Одна из отличительных особенностей вертикальных жалюзи - это возможность их применения в качестве перегородок в административных и производственных помещениях.
+		Варианты раздвижки вертикальных жалюзи (определяются в момент оформления заказа).
+		</p>
       	</div>
       	<div class="product_card_img clearfix">
       		<a href="img/phpThumb_generated_thumbna0il.jpg" data-lightbox="image-4"><img src="img/phpThumb_generated_thumbna0il.jpg" alt=""></a>
@@ -348,11 +346,11 @@
       	</div>
       </div>
 </div>
-<div id="overlay4"></div><!-- Пoдлoжкa -->
-<!-- modal5 -->
+<div id="overlay4"></div>
+<!-- modal5 ворота и роллеты -->
 <div id="modal_form5"> 
 
-      <span id="modal_close5"></i></span> <!-- Кнoпкa зaкрыть --> 
+      <span id="modal_close5"></i></span> 
       <div class="product_card">
       	<div class="product_card_text">
       		<h3>Ворота и роллеты</h3>
@@ -380,18 +378,11 @@
       	</div>
       </div>
 </div>
-<div id="overlay5"></div><!-- Пoдлoжкa -->
-
+<div id="overlay5"></div>
 
 
 
 <script type="text/javascript" src="js/lightbox.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
-
-<!-- <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/jquery.transit.min.js"></script>
-<script type="text/javascript" src="js/lightbox.js"></script>
-<script type="text/javascript" src="js/jquery.bxslider.js"></script>
-<script type="text/javascript" src="js/script.js"></script> -->
 </body>
 </html>
