--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -151,6 +151,11 @@
       		<a href="img/723582975_0.jpg" data-lightbox="image-2"><img src="img/723582975_0.jpg" alt=""></a>
       		<a href="img/291962879_13.jpg" data-lightbox="image-2"><img src="img/291962879_13.jpg" alt=""></a>
       		<a href="img/upload.jpg" data-lightbox="image-2"><img src="img/upload.jpg" alt=""></a>
+
+      		<a href="img/98566143_7.jpg" data-lightbox="image-2"><img src="img/98566143_7.jpg" alt=""></a>
+      		<a href="img/98566143_8.jpg" data-lightbox="image-2"><img src="img/98566143_8.jpg" alt=""></a>
+      		<a href="img/202899455_2.jpg" data-lightbox="image-2"><img src="img/202899455_2.jpg" alt=""></a>
+      		<a href="img/98566143_6.jpg" data-lightbox="image-2"><img src="img/98566143_6.jpg" alt=""></a>
 		</div>
 	</div>
 </div>
@@ -276,9 +281,9 @@
 	<div id="modal_form"> 
       <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
       <form>
-      	<label for="name">Введите Ваше имя</label><br><input id="name" type="text"></input>
-      	<label for="phone">Введите Ваш телефон</label><br><input id="phone" type="tel"></input>
-      	<input type="submit" id="submit" value="Заказать"></input>
+      	<label for="name_footer">Введите Ваше имя</label><br><input id="name_footer" type="text"></input>
+      	<label for="phone_footer">Введите Ваш телефон</label><br><input id="phone_footer" type="tel"></input>
+      	<input type="submit" id="submit_footer" value="Заказать"></input>
       </form>
 </div>
 <div id="overlay"></div>
@@ -301,15 +306,7 @@
       </div>
 </div>
 <div id="overlay1"></div>
-<!-- modal фос -->
-<div id="modal_form2"> 
-      <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
-      <form>
-      	<label for="name">Введите Ваше имя</label><br><input id="name" type="text"></input>
-      	<label for="phone">Введите Ваш телефон</label><br><input id="phone" type="tel"></input>
-      	<input type="submit" id="submit" value="Заказать"></input>
-      </form>
-</div>
+
 <!-- modal4 жалюзи -->
 <div id="modal_form4"> 
       <span id="modal_close4"></i></span>
