--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -31,8 +31,8 @@
 				<div class="callback_btn">Вам перезвонить?</div>
 				<div id="modal_form_recall" class="animated"> 
                    <form>
-				      	<label for="name">Введите Ваше имя</label><br><input id="name" type="text"></input>
-				      	<label for="phone">Введите Ваш телефон</label><br><input id="phone" type="tel"></input>
+				      	<label for="name">Введите Ваше имя</label><br><input id="name" type="text" required=""></input>
+				      	<label for="phone">Введите Ваш телефон</label><br><input id="phone" type="tel" required=""></input>
 				      	<input type="submit" id="submit" value="Заказать"></input>
       				</form>
 				</div>
@@ -281,8 +281,8 @@
 	<div id="modal_form"> 
       <span id="modal_close"><i class="fa fa-times-circle" aria-hidden="true"></i></span> <!-- Кнoпкa зaкрыть --> 
       <form>
-      	<label for="name_footer">Введите Ваше имя</label><br><input id="name_footer" type="text"></input>
-      	<label for="phone_footer">Введите Ваш телефон</label><br><input id="phone_footer" type="tel"></input>
+      	<label for="name_footer">Введите Ваше имя</label><br><input id="name_footer" type="text" required=""></input>
+      	<label for="phone_footer">Введите Ваш телефон</label><br><input id="phone_footer" type="tel" required=""></input>
       	<input type="submit" id="submit_footer" value="Заказать"></input>
       </form>
 </div>
