--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -24,8 +24,8 @@
 		<div class="header_contacts clearfix">
 			<div class="phone_icon"><img src="img/phone_icon.png" alt=""></div>
 			<ul class="header_number">
-				<li class="header_number_item">000 000 00 00</li>
-				<li class="header_number_item">000 000 00 00</li>
+				<li class="header_number_item">(093) 975 02 24</li>
+				<li class="header_number_item">(098) 826 17 34</li>
 			</ul>
 			<div class="recall">
 				<div class="callback_btn">Вам перезвонить?</div>
@@ -199,33 +199,43 @@
 		        <ul class="item_slider_list">
 		            <li class="carusel_item">
 		               <img src="img/review.png" alt="">
-		               <h3 class="carusel_item_head">Дарина</h3>
-		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p>
+		               <h3 class="carusel_item_head">Пасечник Александр Владимирович</h3>
+		               <p class="carusel_item_text">"Солидная компания, приехал хароший замерщик,лет 30-ти,профи-сразу видно, помог мне выбрать класную ткань, которая спасла меня от жары, в квартире стало намного прохладнее+харашо подошла к моему интерьеру.В общем доволен 5+, Спасибо огромное!!!"</p>
 		            </li>
 		            <li class="carusel_item">
 		                <img src="img/review.png" alt="">
-		                <h3 class="carusel_item_head">Дарина</h3>
-		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
+		                <h3 class="carusel_item_head">Павленко Алина</h3>
+		               <p class="carusel_item_text">- "Да. Мне понравилсь ваше обслуживание. Теперь в моей комнате уютний свет и приятний цвет."</p
 		            </li>
 		            <li class="carusel_item">
 		               <img src="img/review.png" alt=""> 
-		               <h3 class="carusel_item_head">Дарина</h3>
-		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
+		               <h3 class="carusel_item_head">Віталіна Федорівна</h3>
+		               <p class="carusel_item_text">"Так, я задоволена результатом. Ціни у вас помірні та й якість задовільна."</p>
 		            </li>
 		            <li class="carusel_item">
 		                <img src="img/review.png" alt="">
-		                <h3 class="carusel_item_head">Дарина</h3>
-		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
+		                <h3 class="carusel_item_head">Сергій Володимирович</h3>
+		               <p class="carusel_item_text">"Ага добре. Стильні вийшли жалюзі. І світлом можна регулювати. Нада буде в прихожу собі повісити."</p>
 		            </li>
 		            <li class="carusel_item">
 		                <img src="img/review.png" alt="">
-		                <h3 class="carusel_item_head">Дарина</h3>
-		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
+		                <h3 class="carusel_item_head">Титарчук Нина Григорьевна</h3>
+		               <p class="carusel_item_text">"Здравствуйте, мне 63 года, хочу поблагодарить Вас за установленные ролеты,ткань выбрала недорогую, пенсия не позволяет, но всьо же стало намного уютнее, ребята молодцы, всьо сделали аккуратно, спасибо, буду вас рекомендовать."</p>
 		            </li>
 		            <li class="carusel_item">
 		                <img src="img/review.png" alt="">
-		                <h3 class="carusel_item_head">Дарина</h3>
-		               <p class="carusel_item_text">Мы работаем по государственной программе «Кредит на утепление»</p
+		                <h3 class="carusel_item_head">Виталий Викторович</h3>
+		               <p class="carusel_item_text">"Конечно удобно. Ненужно дергать больше шторы. Позднее закажу у вас еще на улицу ролеты, с ними буднт удобнее."</p>
+		            </li>
+		            <li class="carusel_item">
+		                <img src="img/review.png" alt="">
+		                <h3 class="carusel_item_head">oleg</h3>
+		               <p class="carusel_item_text">"Только так. На эту жару полюбому вы спасли и сделано все отлично. +LIKE!"</p>
+		            </li>
+		            <li class="carusel_item">
+		                <img src="img/review.png" alt="">
+		                <h3 class="carusel_item_head">Галина</h3>
+		               <p class="carusel_item_text">"так. добре що я у вас взяла, ато не знала щоб робила від цеї жари. Хлопці зробили все як слід."</p>
 		            </li>
 		        </ul>
 		    </div>
@@ -262,9 +272,11 @@
 		</div>
 		<div class="col_2">
 			<ul class="contacts">			
-				<li class="contacts_item">адрес</li>
-				<li class="contacts_item">телефон</li>
-				<li class="contacts_item">электронная почта</li>
+				<li class="contacts_item">ул. Васильковская 15,офис 112</li>
+				<li class="contacts_item">ул. Миропольская 8 офис 201</li>
+				<li class="contacts_item">(098)8261734</li>
+				<li class="contacts_item">(093)9750224</li>
+				<li class="contacts_item">tyrbovec@mail.ru</li>
 			</ul>
 		</div>
 		<div class="col_3">
