--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -256,10 +256,10 @@
 			<h3 class="payment_item_head">Проводим установку наших товаров</h3>
 			<p class="payment_item_text">Блок «Установка (установка своей продукции и чужой) и Оплата» (безналичный, наличный) содержит иконки с текстовой информацией.</p></div>
 			<div class="payment_item"><img src="img/12.png" alt="">
-			<h3 class="payment_item_head">Оплата наличными</h3></br>
+			<h3 class="payment_item_head">Оплата наличными</h3>
 			<p class="payment_item_text">Блок «Установка (установка своей продукции и чужой) и Оплата» (безналичный, наличный) содержит иконки с текстовой информацией.</p></div>
 			<div class="payment_item"><img src="img/13.png" alt="">
-			<h3 class="payment_item_head">Оплата безналом</h3></br>
+			<h3 class="payment_item_head">Оплата безналом</h3>
 			<p class="payment_item_text">Блок «Установка (установка своей продукции и чужой) и Оплата» (безналичный, наличный) содержит иконки с текстовой информацией.</p></div>
 		</div>
 	</div>
